More UI Changes to create a post. It is now a grid view. All category specific fields must be implemented

--- a/SustainabilityAppV1/Base.lproj/Main.storyboard
+++ b/SustainabilityAppV1/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="0Ir-4E-hxe">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="0Ir-4E-hxe">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -894,32 +894,45 @@
         <scene sceneID="gKi-Gt-4jz">
             <objects>
                 <tableViewController storyboardIdentifier="create" id="hga-eu-drM" customClass="CreatePostController" customModule="SustainabilityAppV1" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="H3V-cP-0fT">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="H3V-cP-0fT">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <sections>
                             <tableViewSection headerTitle="Category" id="4F5-cO-Npy">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Mav-fZ-EOk">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="131" id="Mav-fZ-EOk">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Mav-fZ-EOk" id="tnu-0V-Xfh">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xbH-LP-8dG">
                                                     <rect key="frame" x="0.0" y="-162" width="320" height="162"/>
-                                                    <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                                        <rect key="frame" x="149" y="-89" width="156" height="162"/>
+                                                    <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                                        <rect key="frame" x="122" y="-26" width="156" height="162"/>
                                                     </variation>
                                                 </pickerView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="centerX" secondItem="xbH-LP-8dG" secondAttribute="centerX" id="7Oh-zO-EOO"/>
+                                                <constraint firstAttribute="centerY" secondItem="xbH-LP-8dG" secondAttribute="centerY" id="iOG-93-g3e"/>
+                                            </constraints>
                                             <variation key="default">
                                                 <mask key="subviews">
                                                     <exclude reference="xbH-LP-8dG"/>
+                                                </mask>
+                                                <mask key="constraints">
+                                                    <exclude reference="7Oh-zO-EOO"/>
+                                                    <exclude reference="iOG-93-g3e"/>
                                                 </mask>
                                             </variation>
                                             <variation key="heightClass=regular-widthClass=compact">
                                                 <mask key="subviews">
                                                     <include reference="xbH-LP-8dG"/>
+                                                </mask>
+                                                <mask key="constraints">
+                                                    <include reference="7Oh-zO-EOO"/>
+                                                    <include reference="iOG-93-g3e"/>
                                                 </mask>
                                             </variation>
                                         </tableViewCellContentView>
@@ -928,37 +941,62 @@
                             </tableViewSection>
                             <tableViewSection headerTitle="Title" id="VoV-vH-GSi">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="cnh-Pg-CIZ">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="30" id="cnh-Pg-CIZ">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cnh-Pg-CIZ" id="Dhh-8F-RQX">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="l3e-DZ-WtJ">
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="l3e-DZ-WtJ">
                                                     <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="bPd-lE-NdK"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
-                                                    <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                                        <rect key="frame" x="75" y="7" width="250" height="30"/>
+                                                    <variation key="default">
+                                                        <mask key="constraints">
+                                                            <exclude reference="bPd-lE-NdK"/>
+                                                        </mask>
+                                                    </variation>
+                                                    <variation key="heightClass=regular-widthClass=compact" ambiguous="YES" misplaced="YES">
+                                                        <rect key="frame" x="88" y="0.0" width="224" height="30"/>
+                                                        <mask key="constraints">
+                                                            <include reference="bPd-lE-NdK"/>
+                                                        </mask>
                                                     </variation>
                                                 </textField>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="l3e-DZ-WtJ" firstAttribute="leading" secondItem="Dhh-8F-RQX" secondAttribute="leadingMargin" constant="5" id="QnM-oU-4tg"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="l3e-DZ-WtJ" secondAttribute="trailing" constant="5" id="c1g-6f-sdN"/>
+                                            </constraints>
                                             <variation key="default">
                                                 <mask key="subviews">
                                                     <exclude reference="l3e-DZ-WtJ"/>
+                                                </mask>
+                                                <mask key="constraints">
+                                                    <exclude reference="QnM-oU-4tg"/>
+                                                    <exclude reference="c1g-6f-sdN"/>
                                                 </mask>
                                             </variation>
                                             <variation key="heightClass=regular-widthClass=compact">
                                                 <mask key="subviews">
                                                     <include reference="l3e-DZ-WtJ"/>
                                                 </mask>
+                                                <mask key="constraints">
+                                                    <include reference="QnM-oU-4tg"/>
+                                                    <include reference="c1g-6f-sdN"/>
+                                                </mask>
                                             </variation>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
                             <tableViewSection headerTitle="Description" id="wJa-Iy-Vcd">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="167" id="xYg-ow-twd">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="129" id="xYg-ow-twd">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="xYg-ow-twd" id="zSu-QF-d2l">
                                             <autoresizingMask key="autoresizingMask"/>
@@ -966,22 +1004,49 @@
                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ry8-Ak-HAd">
                                                     <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="128" id="tEZ-HZ-2Px"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                                    <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                                        <rect key="frame" x="104" y="19" width="250" height="128"/>
+                                                    <variation key="default">
+                                                        <mask key="constraints">
+                                                            <exclude reference="tEZ-HZ-2Px"/>
+                                                        </mask>
+                                                    </variation>
+                                                    <variation key="heightClass=regular-widthClass=compact" ambiguous="YES" misplaced="YES">
+                                                        <rect key="frame" x="14" y="0.0" width="373" height="135"/>
+                                                        <mask key="constraints">
+                                                            <include reference="tEZ-HZ-2Px"/>
+                                                        </mask>
                                                     </variation>
                                                 </textView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Ry8-Ak-HAd" firstAttribute="leading" secondItem="zSu-QF-d2l" secondAttribute="leadingMargin" constant="5" id="O7e-MQ-sRg"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="Ry8-Ak-HAd" secondAttribute="trailing" constant="5" id="Ruv-Cp-VOL"/>
+                                            </constraints>
                                             <variation key="default">
                                                 <mask key="subviews">
                                                     <exclude reference="Ry8-Ak-HAd"/>
+                                                </mask>
+                                                <mask key="constraints">
+                                                    <exclude reference="O7e-MQ-sRg"/>
+                                                    <exclude reference="Ruv-Cp-VOL"/>
                                                 </mask>
                                             </variation>
                                             <variation key="heightClass=regular-widthClass=compact">
                                                 <mask key="subviews">
                                                     <include reference="Ry8-Ak-HAd"/>
+                                                </mask>
+                                                <mask key="constraints">
+                                                    <include reference="O7e-MQ-sRg"/>
+                                                    <include reference="Ruv-Cp-VOL"/>
+                                                </mask>
+                                            </variation>
+                                            <variation key="heightClass=regular-widthClass=regular">
+                                                <mask key="subviews">
+                                                    <exclude reference="Ry8-Ak-HAd"/>
                                                 </mask>
                                             </variation>
                                         </tableViewCellContentView>
@@ -999,7 +1064,7 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                                        <rect key="frame" x="111" y="40" width="240" height="57"/>
+                                                        <rect key="frame" x="8" y="14" width="131" height="57"/>
                                                     </variation>
                                                 </imageView>
                                             </subviews>
@@ -1040,7 +1105,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dJJ-Bg-Bb2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3889.5" y="-2243.25"/>
+            <point key="canvasLocation" x="3916.5" y="-2243.25"/>
         </scene>
     </scenes>
     <resources>
