--- a/SustainabilityAppV1/Base.lproj/Main.storyboard
+++ b/SustainabilityAppV1/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="0Ir-4E-hxe">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="0Ir-4E-hxe">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -908,9 +909,6 @@
                                             <subviews>
                                                 <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xbH-LP-8dG">
                                                     <rect key="frame" x="0.0" y="-162" width="320" height="162"/>
-                                                    <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                                        <rect key="frame" x="122" y="-26" width="156" height="162"/>
-                                                    </variation>
                                                 </pickerView>
                                             </subviews>
                                             <constraints>
@@ -1060,22 +1058,55 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="xnu-kT-ZnJ" id="tmA-i5-V3j">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Leaf.png" highlighted="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CQY-k1-kic">
+                                                <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="skateboard.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="TQv-al-XWr">
                                                     <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
-                                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                                        <rect key="frame" x="8" y="14" width="131" height="57"/>
+                                                    <variation key="heightClass=regular-widthClass=compact" ambiguous="YES" misplaced="YES">
+                                                        <rect key="frame" x="127" y="20" width="128" height="110"/>
+                                                    </variation>
+                                                </imageView>
+                                                <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="skateboard.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="KsP-hv-E1B">
+                                                    <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                                    <variation key="heightClass=regular-widthClass=compact" ambiguous="YES" misplaced="YES">
+                                                        <rect key="frame" x="272" y="20" width="128" height="110"/>
+                                                    </variation>
+                                                </imageView>
+                                                <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="skateboard.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="LbM-P7-0Bp">
+                                                    <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                                    <variation key="heightClass=regular-widthClass=compact" ambiguous="YES" misplaced="YES">
+                                                        <rect key="frame" x="19" y="20" width="100" height="100"/>
                                                     </variation>
                                                 </imageView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="TQv-al-XWr" firstAttribute="leading" secondItem="LbM-P7-0Bp" secondAttribute="trailing" constant="8" id="1d8-cY-pOx"/>
+                                                <constraint firstItem="LbM-P7-0Bp" firstAttribute="bottom" secondItem="TQv-al-XWr" secondAttribute="bottom" constant="-10" id="EZM-uB-ZJQ"/>
+                                                <constraint firstItem="KsP-hv-E1B" firstAttribute="leading" secondItem="TQv-al-XWr" secondAttribute="trailing" constant="17" id="GnD-ZJ-bH9"/>
+                                                <constraint firstItem="KsP-hv-E1B" firstAttribute="bottom" secondItem="TQv-al-XWr" secondAttribute="bottom" id="n9f-hq-QUu"/>
+                                            </constraints>
                                             <variation key="default">
                                                 <mask key="subviews">
-                                                    <exclude reference="CQY-k1-kic"/>
+                                                    <exclude reference="TQv-al-XWr"/>
+                                                    <exclude reference="KsP-hv-E1B"/>
+                                                    <exclude reference="LbM-P7-0Bp"/>
+                                                </mask>
+                                                <mask key="constraints">
+                                                    <exclude reference="EZM-uB-ZJQ"/>
+                                                    <exclude reference="1d8-cY-pOx"/>
+                                                    <exclude reference="GnD-ZJ-bH9"/>
+                                                    <exclude reference="n9f-hq-QUu"/>
                                                 </mask>
                                             </variation>
                                             <variation key="heightClass=regular-widthClass=compact">
                                                 <mask key="subviews">
-                                                    <include reference="CQY-k1-kic"/>
+                                                    <include reference="TQv-al-XWr"/>
+                                                    <include reference="KsP-hv-E1B"/>
+                                                    <include reference="LbM-P7-0Bp"/>
+                                                </mask>
+                                                <mask key="constraints">
+                                                    <include reference="EZM-uB-ZJQ"/>
+                                                    <include reference="1d8-cY-pOx"/>
+                                                    <include reference="GnD-ZJ-bH9"/>
+                                                    <include reference="n9f-hq-QUu"/>
                                                 </mask>
                                             </variation>
                                         </tableViewCellContentView>
@@ -1090,26 +1121,32 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Create a Post" id="yyD-0s-4MA">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="bVj-GY-R27">
+                            <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                             <connections>
                                 <action selector="cancel:" destination="hga-eu-drM" id="wOI-tt-Onp"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="oPs-gV-VqW"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="oPs-gV-VqW">
+                            <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="cat_picker" destination="xbH-LP-8dG" id="eKn-oa-064"/>
                         <outlet property="descOutlet" destination="Ry8-Ak-HAd" id="dBc-OM-Tcm"/>
-                        <outlet property="image1" destination="CQY-k1-kic" id="lMj-ID-eeJ"/>
+                        <outlet property="image1" destination="LbM-P7-0Bp" id="WFr-ap-u3g"/>
+                        <outlet property="image2" destination="TQv-al-XWr" id="xvi-5a-4h1"/>
+                        <outlet property="image3" destination="KsP-hv-E1B" id="gxX-Us-nsc"/>
                         <outlet property="title_field" destination="l3e-DZ-WtJ" id="U3y-QL-X9F"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dJJ-Bg-Bb2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3916.5" y="-2243.25"/>
+            <point key="canvasLocation" x="4282.5" y="-2262.75"/>
         </scene>
     </scenes>
     <resources>
         <image name="Leaf.png" width="98" height="57"/>
+        <image name="skateboard.jpg" width="750" height="381"/>
         <image name="threelines.png" width="44" height="29"/>
     </resources>
 </document>
